--- a/client/meteor-s-id.html
+++ b/client/meteor-s-id.html
@@ -47,7 +47,7 @@
     <section class="jumbo">
         <h2>Accounts for Meteor.js</h2>
         <span>simple customization</span>
-        <small>...login with Google, Twitter, GitHub</small>
+        <small>...login with 3rd party OAuth services</small>
         <div class="buttons">
             <a href="#" class="btn btn-jumbo js-go-to-install"><i class="fa fa-power-off"></i> Install</a>
             <a href="http://s-id-demo.meteor.com" class="btn btn-jumbo"><i class="fa fa-rocket"></i> Demo</a>
