--- a/client/meteor-s-id.html
+++ b/client/meteor-s-id.html
@@ -18,7 +18,7 @@
             <span><a href="#" class="js-go-top">sId</a></span>
             <small class="right">
                 <a class="js-go-to-paragraph" href="#usage">Usage</a>
-                <a href="http://s-id-demo.meteor.com">Demo</a>
+                <a href="http://s-id-demo.meteorapp.com">Demo</a>
                 <a class="js-go-to-paragraph" href="#fullconfig">Config</a>
                 <a class="js-go-to-paragraph" href="#logtheuserinusinganexternalservice">External Services</a>
                 <a class="js-go-to-paragraph" href="#styling">Styling</a>
@@ -50,7 +50,7 @@
         <small>...login with 3rd party OAuth services</small>
         <div class="buttons">
             <a href="#" class="btn btn-jumbo js-go-to-install"><i class="fa fa-power-off"></i> Install</a>
-            <a href="http://s-id-demo.meteor.com" class="btn btn-jumbo"><i class="fa fa-rocket"></i> Demo</a>
+            <a href="http://s-id-demo.meteorapp.com" class="btn btn-jumbo"><i class="fa fa-rocket"></i> Demo</a>
             <a href="https://github.com/juliancwirko/meteor-s-id" class="btn btn-jumbo"><i class="fa fa-github"></i> GitHub</a>
         </div>
     </section>
